[package]
name = "graphview"
version = "0.1.0"
edition = "2021"
description = "Simple online graphviz (.dot) viewer."

[dependencies]
axum = { version = "0.6", features = ["tracing"] }
anyhow = "1"
handlebars = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
